<resources>
    <string name="app_name">My Foody</string>
    <string name="recipes">Recipes</string>
    <string name="favorite_recipes">Favorites</string>
    <string name="food_joke">Joke</string>
    <string name="add_menu">Add Menu</string>
    <string name="sad">sad</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="indomie_rendang">Indomie Rendang</string>
    <string name="funny_number">69</string>
    <string name="favorite">favorite</string>
    <string name="clock">clock</string>
    <string name="vegan">Vegan</string>
    <string name="food_joke_fragment">Food Joke Fragment</string>
    <string name="favorite_recipes_fragment">Favorite Recipes Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="image_view">image view</string>
    <string name="likes">Likes</string>
    <string name="diary_free">Diary Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="grams">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <string name="save_to_favorite_recipes">Save to favorite recipes</string>
    <string name="no_data_image">No Data Image</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete favorite menu</string>
    <string name="delete_all">Delete All</string>
    <string name="error">Error</string>
    <string name="share">Share</string>
</resources>