<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".RecipesFragment">

    <com.todkars.shimmer.ShimmerRecyclerView
        android:id="@+id/recipes_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:shimmer_recycler_item_count="3"
        app:shimmer_recycler_layout="@layout/recipes_placeholder_row_layout"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/add_menu"
        android:focusable="true"
        android:src="@drawable/ic_restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/error_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:contentDescription="@string/sad"
        android:src="@drawable/ic_sad"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:text="@string/no_internet_connection"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/error_img"
        app:layout_constraintStart_toStartOf="@+id/error_img"
        app:layout_constraintTop_toBottomOf="@+id/error_img" />

</androidx.constraintlayout.widget.ConstraintLayout>