<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="com.exfarnanda1945.my_foody_course.model.ResultsItem" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_overview_xml_constraintlayout_scene"
        tools:context=".ui.fragments.overview.OverviewFragment">

        <ImageView
            android:id="@+id/main_imageview"
            loadOverviewImage="@{result.image}"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:contentDescription="@string/image_view"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <View
            android:id="@+id/gradient_overlay"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@+id/main_imageview"
            app:layout_constraintEnd_toEndOf="@+id/main_imageview"
            app:layout_constraintStart_toStartOf="@+id/main_imageview"
            app:layout_constraintTop_toTopOf="@+id/main_imageview"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:text="@{String.valueOf(result.readyInMinutes)}"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/main_imageview"
            app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

        <ImageView
            android:id="@+id/time_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clock"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toTopOf="@+id/time_textView"
            app:layout_constraintEnd_toEndOf="@+id/time_textView"
            app:layout_constraintStart_toStartOf="@+id/time_textView"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/likes_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@{String.valueOf(result.aggregateLikes)}"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/time_textView"
            app:layout_constraintEnd_toStartOf="@+id/time_textView" />

        <ImageView
            android:id="@+id/likes_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/likes"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toTopOf="@+id/likes_textView"
            app:layout_constraintEnd_toEndOf="@+id/likes_textView"
            app:layout_constraintStart_toStartOf="@+id/likes_textView"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/courgette"
            android:text="@{result.title}"
            android:textColor="@color/titleColor"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_imageview" />

        <ImageView
            android:id="@+id/vegetarian_imageView"
            isVegetarian="@{result.vegetarian}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/vegetarian"
            android:src="@drawable/ic_check_mark"
            app:layout_constraintStart_toStartOf="@+id/title_textView"
            app:layout_constraintTop_toBottomOf="@+id/title_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/vegetarian_textView"
            isVegetarian="@{result.vegetarian}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegetarian"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_imageView" />

        <ImageView
            android:id="@+id/vegan_imageView"
            isVegan="@{result.vegan}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/vegan"
            android:src="@drawable/ic_check_mark"
            app:layout_constraintEnd_toEndOf="@+id/vegetarian_imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/vegetarian_imageView"
            app:layout_constraintTop_toBottomOf="@+id/vegetarian_imageView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/vegan_textView"
            isVegan="@{result.vegan}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegan"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
            app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
            app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />

        <ImageView
            android:id="@+id/gluten_free_imageView"
            isGlutenFree="@{result.glutenFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/gluten_free"
            android:src="@drawable/ic_check_mark"
            app:layout_constraintBottom_toBottomOf="@+id/vegetarian_textView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
            app:layout_constraintTop_toTopOf="@+id/vegetarian_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/gluten_free_textView"
            isGlutenFree="@{result.glutenFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gluten_free"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_imageView" />

        <ImageView
            android:id="@+id/diary_free_imageView"
            isDiaryFree="@{result.dairyFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/diary_free"
            android:src="@drawable/ic_check_mark"
            app:layout_constraintBottom_toBottomOf="@+id/vegan_textView"
            app:layout_constraintStart_toEndOf="@+id/vegetarian_textView"
            app:layout_constraintTop_toTopOf="@+id/vegan_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/diary_free_textView"
            isDiaryFree="@{result.dairyFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/diary_free"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/diary_free_imageView"
            app:layout_constraintStart_toEndOf="@+id/diary_free_imageView"
            app:layout_constraintTop_toTopOf="@+id/diary_free_imageView" />

        <ImageView
            android:id="@+id/healthy_imageView"
            isHealthy="@{result.veryHealthy}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/healthy"
            android:src="@drawable/ic_check_mark"
            app:layout_constraintBottom_toBottomOf="@+id/gluten_free_textView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
            app:layout_constraintTop_toTopOf="@+id/gluten_free_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/healthy_textView"
            isHealthy="@{result.veryHealthy}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/healthy"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/healthy_imageView"
            app:layout_constraintStart_toEndOf="@+id/healthy_imageView"
            app:layout_constraintTop_toTopOf="@+id/healthy_imageView" />

        <ImageView
            android:id="@+id/cheap_imageView"
            isCheap="@{result.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/cheap"
            android:src="@drawable/ic_check_mark"
            app:layout_constraintBottom_toBottomOf="@+id/diary_free_textView"
            app:layout_constraintStart_toEndOf="@+id/gluten_free_textView"
            app:layout_constraintTop_toTopOf="@+id/diary_free_textView"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/cheap_textView"
            isCheap="@{result.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cheap"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
            app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
            app:layout_constraintTop_toTopOf="@+id/cheap_imageView" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diary_free_textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/summary_textView"
                    parseHtml="@{result.summary}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>